--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,16 @@
     --basic-color-logo: #4d5ae5;
     --hover-color: #404bbf;
 }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+*::after {
+  box-sizing: border-box;
+}
+
 
 p,
 h1,
@@ -47,6 +57,7 @@ body {
 
 .header-cont {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .logo {
@@ -98,6 +109,8 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    position: relative;
+    color: #404bbf;
 }
 
 .link {
