--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,6 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    position: relative;
     color: #404bbf;
 }
 
@@ -125,6 +124,22 @@ body {
     color: var(--primary-black);
     display: block;
     padding: 24px 0;
+    color: #404bbf;
+}
+.current{
+    position: relative;
+    color:#404bbf;
+}
+.current::after{
+    content:'';
+    position: absolute;
+    bottom: -1px;
+    left:0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color:#404bbf;
+    
 }
 
 .header_menu_li:hover {
