--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,7 @@ body {
     display: block;
     padding: 24px 0;
     color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .current{
     position: relative;
@@ -160,6 +161,7 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--secondary-black);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts_list {
