--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,15 @@
     --basic-color-logo: #4d5ae5;
     --hover-color: #404bbf;
 }
+
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 
@@ -99,6 +100,7 @@ body {
     display: flex;
     gap: 40px;
 }
+
 .contacts_list {
     display: flex;
     gap: 40px;
@@ -127,20 +129,22 @@ body {
     color: #404bbf;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.current{
+
+.current {
     position: relative;
-    color:#404bbf;
+    color: #404bbf;
 }
-.current::after{
-    content:'';
+
+.current::after {
+    content: '';
     position: absolute;
     bottom: -1px;
-    left:0;
+    left: 0;
     width: 100%;
     height: 4px;
     border-radius: 2px;
-    background-color:#404bbf;
-    
+    background-color: #404bbf;
+
 }
 
 .header_menu_li:hover {
@@ -180,6 +184,11 @@ body {
 .main_title {
     background-color: var(--primary-black);
     padding: 188px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
+    max-width: 1440px;
+    background-repeat: no-repeat; 
+    background-position: center; 
+    background-size: cover; 
 }
 
 .main_h {
