--- a/css/style.css
+++ b/css/style.css
@@ -320,11 +320,13 @@ body {
     background-color: var(--basic-white);
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
 }
 
 .main_team_li {
     display: flex;
     gap: 24px;
+    justify-content: center;
 }
 
 .team_text {
