--- a/css/style.css
+++ b/css/style.css
@@ -459,3 +459,59 @@ body {
     border: 1px solid #e7e9fc;
     border-top: none;
 }
+
+
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--navyblue-modal, rgba(46, 47, 66, 0.40));
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+ .modal-window{
+    width: 408px;
+    min-height: 584px;
+    border-radius: 4px;
+    background: var(--dairy);
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+ .modal-close-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+       
+ }
+.modal-close-btn:is(:hover,:focus){
+    background-color:#404bbf;
+    border: none;
+    fill: #ffffff;
+}
+ .close-icon{
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+ .close-icon:is(:hover, :focus){
+    
+ }
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
