--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,7 @@ body {
     width: 264px;
     height: 112px;
     border-radius: 4px;
-    background: var(--cloud);
+    background: #f4f4fd;
     margin-bottom: 8px;
 }
 
