--- a/css/style.css
+++ b/css/style.css
@@ -331,9 +331,7 @@ body {
     background-color: var(--basic-white);
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
-    0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow: 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .main_team_li {
@@ -342,8 +340,43 @@ body {
     justify-content: center;
 }
 
+.team_li {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+}
+
 .team_text {
-    padding: 32px 16px;
+    padding: 32px 0px;
+}
+
+.media_item {
+    width: 40px;
+    height: 40px;
+}
+
+.media_link:is(:hover, :focus) {
+    background-color: #404bbf;
+}
+
+.media_link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.media_link:is(:hover, :focus) {
+    background-color: #404bbf;
+}
+
+.media_icon_team {
+    fill: #f4f4fd;
+
 }
 
 .main_team_item_title {
