--- a/css/style.css
+++ b/css/style.css
@@ -395,6 +395,46 @@ body {
     letter-spacing: 0.02em;
     color: var(--secondary-black);
     text-align: center;
+    margin-bottom: 8px;
+}
+
+.customers {
+    padding: 120px 0;
+}
+
+.customers-list {
+    display: flex;
+    gap: 24px;
+}
+
+.customers-item {
+    width: calc((100% - 24px * 5) / 6);
+    height: 88px;
+
+
+}
+
+.customers-link {
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    border: 1px solid var(--light-slate);
+    display: flex;
+    color: var(--light-slate);
+    align-items: center;
+    justify-content: center;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customers-icon {
+    fill: currentColor;
+
+}
+
+.customers-link:is(:hover, :focus) {
+    color: var(--ocean);
+    border: 1px solid var(--ocean);
 }
 
 .footer_section {
