--- a/css/style.css
+++ b/css/style.css
@@ -401,40 +401,45 @@ body {
 .customers {
     padding: 120px 0;
 }
-
-.customers-list {
+.customers_title{
+    font-size: 36px;
+    line-height: 1.11;
+    color: #2e2f42;
+    margin-bottom: 72px;
+}
+.customers_list {
     display: flex;
     gap: 24px;
 }
 
-.customers-item {
+.customers_item {
     width: calc((100% - 24px * 5) / 6);
     height: 88px;
 
 
 }
 
-.customers-link {
+.customers_link {
     width: 100%;
     height: 100%;
     border-radius: 4px;
-    border: 1px solid var(--light-slate);
+    border: 1px solid #8e8f99;
     display: flex;
-    color: var(--light-slate);
+    color: #8e8f99;
     align-items: center;
     justify-content: center;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customers-icon {
+.customers_icon {
     fill: currentColor;
 
 }
 
-.customers-link:is(:hover, :focus) {
+.customers_link:is(:hover, :focus) {
     color: var(--ocean);
-    border: 1px solid var(--ocean);
+    border: 1px solid #404bbf;
 }
 
 .footer_section {
