--- a/css/style.css
+++ b/css/style.css
@@ -438,7 +438,7 @@ body {
 }
 
 .customers_link:is(:hover, :focus) {
-    color: var(--ocean);
+    color: #404bbf;
     border: 1px solid #404bbf;
 }
 
