--- a/css/style.css
+++ b/css/style.css
@@ -562,7 +562,7 @@ body {
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-window {
+.modal_window {
     width: 408px;
     min-height: 584px;
     border-radius: 4px;
@@ -575,7 +575,7 @@ body {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn {
+.modal_close_btn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -593,19 +593,19 @@ body {
 
 }
 
-.modal-close-btn:is(:hover, :focus) {
+.modal_close_btn:is(:hover, :focus) {
     background-color: #404bbf;
     border: none;
     fill: #ffffff;
 }
 
-.close-icon {
+.close_icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.close-icon:is(:hover, :focus) {}
+.close_icon:is(:hover, :focus) {}
 
-.is-hidden {
+.is_hidden {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
