--- a/css/style.css
+++ b/css/style.css
@@ -558,7 +558,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: var(--navyblue-modal, rgba(46, 47, 66, 0.40));
+    background: #fcfcfc;, rgba(46, 47, 66, 0.40));
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -605,7 +605,7 @@ body {
 
 .close_icon:is(:hover, :focus) {}
 
-.is_hidden {
+.is-hidden {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
