--- a/css/style.css
+++ b/css/style.css
@@ -566,7 +566,7 @@ body {
     width: 408px;
     min-height: 584px;
     border-radius: 4px;
-    background: var(--dairy);
+    background: #fcfcfc;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
     position: absolute;
     left: 50%;
