--- a/css/style.css
+++ b/css/style.css
@@ -602,6 +602,11 @@ body {
 .close_icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.close_icon:is(:hover, :focus) {
+    background-color: #404bbf;
+    border: none;
+    fill: #ffffff;
+}
 
 .is-hidden {
     opacity: 0;
