--- a/css/style.css
+++ b/css/style.css
@@ -564,7 +564,7 @@ body {
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal_window {
+.modal-window {
     width: 408px;
     min-height: 584px;
     border-radius: 4px;
@@ -577,7 +577,7 @@ body {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal_close_btn {
+.modal-close-btn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -594,8 +594,8 @@ body {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal_close_btn:hover,
-.modal_close_btn:focus {
+.modal-close-btn:hover,
+.modal-close-btn:focus {
     background-color: #404bbf;
     border: none;
     fill: #ffffff;
