--- a/css/style.css
+++ b/css/style.css
@@ -594,7 +594,12 @@ body {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn:hover,
+.modal-close-btn:hover {
+    background-color: #404bbf;
+    border: none;
+    fill: #ffffff;
+}
+
 .modal-close-btn:focus {
     background-color: #404bbf;
     border: none;
