--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,15 @@ body {
     padding: 100px 0;
 }
 
+.footer_cont {
+    margin-right: 120px;
+}
+
+.footer_main {
+    display: flex;
+    align-items: baseline;
+}
+
 .footer_logo {
     font-family: "Raleway", sans-serif;
     font-weight: 800;
@@ -477,9 +486,45 @@ body {
     color: var(--secondary-whitecolor);
     letter-spacing: 0.02em;
     max-width: 264px;
-
+    display: flex;
+    width: 100%;
 }
 
+.media_title {
+    color: #ffffff;
+    font-family: Roboto;
+    font: size 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+.footer_media_list{
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+}
+.footer_media_item{
+    width: 40px;
+    height: 40px;
+}
+.footer_media_link{
+    width: 100%;
+    height: 100%;
+    border-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer_media_link:is(:hover,:focus){
+    background-color: #31d0aa;
+}
+.media_icon_footer{
+    fill: #f4f4fd;
+}
 .portfolio_main_but {
     padding-top: 96px;
     padding-bottom: 120px;
