--- a/css/style.css
+++ b/css/style.css
@@ -512,7 +512,7 @@ body {
 .footer_media_link{
     width: 100%;
     height: 100%;
-    border-color: #4d5ae5;
+    background-color: #4d5ae5;
     border-radius: 50%;
     display: flex;
     align-items: center;
