--- a/css/style.css
+++ b/css/style.css
@@ -542,6 +542,13 @@ body {
     margin-bottom: 72px;
 }
 
+.portfolio_button_list {
+    display: flex;
+    margin-bottom: 72px;
+    gap: 244px;
+    justify-content: center;
+}
+
 .potfolio_main_item {}
 
 .portfolio_but {
@@ -556,18 +563,23 @@ body {
     padding: 12px 24px;
     border: 1px solid #e7e9fc;
     border-radius: 4px;
+    background: #f4f4fd;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio_but:hover {
     color: var(--basic-white);
     background-color: var(--hover-color);
     border: 1px solid transparent;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+
 }
 
 .portfolio_but:focus {
     color: var(--basic-white);
     background-color: var(--hover-color);
     border: 1px solid transparent;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio_im {
