--- a/css/style.css
+++ b/css/style.css
@@ -610,6 +610,44 @@ body {
     color: var(--secondary-black);
 }
 
+.portfolio_img-overflow {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio_text-overflow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: var(--iris);
+    color: var(--cloud);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 40px 32px;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio_img {
+    display: block;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.porfolio_img:hover .text-portfolio-overflow,
+.portfolio_img:focus .text-portfolio-overflow {
+    transform: translateY(0%);
+}
+
+.portfolio_img:is(:hover, :focus) {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .portfolio_info {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
