--- a/css/style.css
+++ b/css/style.css
@@ -520,7 +520,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer_media_link:is(:hover, :focus) {
@@ -637,8 +637,8 @@ body {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.porfolio_img:hover .text-portfolio-overflow,
-.portfolio_img:focus .text-portfolio-overflow {
+.porfolio_img:hover .text_portfolio-overflow,
+.portfolio_img:focus .text_portfolio-overflow {
     transform: translateY(0%);
 }
 
