--- a/css/style.css
+++ b/css/style.css
@@ -620,8 +620,8 @@ body {
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: var(--iris);
-    color: var(--cloud);
+    background-color: #4d5ae5;
+    color: #f4f4fd;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
