--- a/css/style.css
+++ b/css/style.css
@@ -636,8 +636,8 @@ body {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.porfolio_img:hover .text_portfolio-overflow:hover,
-.portfolio_img:focus .text_portfolio-overflow:focus {
+.porfolio_img:hover, .text_portfolio-overflow:hover,
+.portfolio_img:focus, .text_portfolio-overflow:focus {
     transform: translateY(0%);
 }
 
