--- a/css/style.css
+++ b/css/style.css
@@ -636,13 +636,8 @@ body {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.porfolio_img:hover,
-.portfolio_img:focus {
-    transform: translateY(0%);
-}
-
-.text_portfolio-overflow:hover,
-.text_portfolio-overflow:focus {
+.porfolio_img:hover .text_portfolio-overflow,
+.portfolio_img:focus .text_portfolio-overflow {
     transform: translateY(0%);
 }
 
