--- a/css/style.css
+++ b/css/style.css
@@ -693,17 +693,13 @@ body {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn:hover {
+.modal-close-btn:is(:hover, :focus) {
     background-color: #404bbf;
     border: none;
     fill: #ffffff;
 }
 
-.modal-close-btn:focus {
-    background-color: #404bbf;
-    border: none;
-    fill: #ffffff;
-}
+
 
 .close_icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
