--- a/css/style.css
+++ b/css/style.css
@@ -643,7 +643,11 @@ body {
         0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.porfolio_img:is(:hover, :focus) .text_portfolio-overflow {
+.porfolio_img:hover.text_portfolio-overflow {
+    transform: translateY(0%);
+}
+
+.porfolio_img:focus.text_portfolio-overflow {
     transform: translateY(0%);
 }
 
