--- a/css/style.css
+++ b/css/style.css
@@ -643,11 +643,7 @@ body {
         0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.porfolio_img:hover .portfolio_text-overflow {
-    transform: translateY(0%);
-}
-
-.porfolio_img:focus .portfolio_text-overflow {
+.porfolio_img:is(:hover, :focus) .portfolio_text-overflow {
     transform: translateY(0%);
 }
 
