--- a/css/style.css
+++ b/css/style.css
@@ -636,10 +636,12 @@ body {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.porfolio_img:is(:hover, :focus) .portfolio_text-overflow {
+.portfolio_img:hover .portfolio_text-overflow {
     transform: translateY(0%);
 }
-
+.portfolio_img:focus .portfolio_text-overflow {
+    transform: translateY(0%);
+}
 .portfolio_img:is(:hover, :focus) {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
