--- a/css/style.css
+++ b/css/style.css
@@ -639,9 +639,11 @@ body {
 .portfolio_img:hover .portfolio_text-overflow {
     transform: translateY(0%);
 }
+
 .portfolio_img:focus .portfolio_text-overflow {
     transform: translateY(0%);
 }
+
 .portfolio_img:is(:hover, :focus) {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -695,13 +697,17 @@ body {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn:is(:hover, :focus) {
+.modal-close-btn:hover {
     background-color: #404bbf;
     border: none;
     fill: #ffffff;
 }
 
-
+.modal-close-btn:focus {
+    background-color: #404bbf;
+    border: none;
+    fill: #ffffff;
+}
 
 .close_icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
