--- a/css/style.css
+++ b/css/style.css
@@ -697,13 +697,13 @@ body {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn:hover {
+.modal-close-but:hover {
     background-color: #404bbf;
     border: none;
     fill: #ffffff;
 }
 
-.modal-close-btn:focus {
+.modal-close-but:focus {
     background-color: #404bbf;
     border: none;
     fill: #ffffff;
