--- a/css/style.css
+++ b/css/style.css
@@ -680,7 +680,7 @@ body {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn {
+.modal-close-but {
     display: flex;
     justify-content: center;
     align-items: center;
