--- a/css/style.css
+++ b/css/style.css
@@ -712,9 +712,9 @@ body {
 .close_icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.close_icon:is(:hover,:focus){
-    
-}
+
+.close_icon:is(:hover, :focus) {}
+
 .is-hidden {
     opacity: 0;
     visibility: hidden;
