--- a/css/style.css
+++ b/css/style.css
@@ -9,17 +9,6 @@
     --hover-color: #404bbf;
 }
 
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-*::after {
-    box-sizing: border-box;
-}
-
-
 p,
 h1,
 h2,
@@ -33,6 +22,8 @@ h6 {
 
 img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 ul,
