--- a/css/style.css
+++ b/css/style.css
@@ -669,7 +669,7 @@ body {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-but {
+.modal_close_but {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -686,13 +686,13 @@ body {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-but:hover {
+.modal_close_but:hover {
     background-color: #404bbf;
     border: none;
     fill: #ffffff;
 }
 
-.modal-close-but:focus {
+.modal_close_but:focus {
     background-color: #404bbf;
     border: none;
     fill: #ffffff;
@@ -701,8 +701,6 @@ body {
 .close_icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.close_icon:is(:hover, :focus) {}
 
 .is-hidden {
     opacity: 0;
