--- a/css/style.css
+++ b/css/style.css
@@ -686,7 +686,7 @@ body {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal_close_but:hover {
+.data_modal_close:hover {
     background-color: #404bbf;
     border: none;
     fill: #ffffff;
