--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,8 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .main_h {
@@ -396,6 +398,7 @@ body {
     line-height: 1.11;
     color: #2e2f42;
     margin-bottom: 72px;
+    text-align: center;
 }
 
 .customers_list {
@@ -686,7 +689,7 @@ body {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.data_modal_close:hover {
+.modal_close_but:hover {
     background-color: #404bbf;
     border: none;
     fill: #ffffff;
