--- a/css/style.css
+++ b/css/style.css
@@ -47,64 +47,6 @@ body {
     background-color: #FFFFFF;
 }
 
-.header-cont {
-    border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-}
-
-.logo {
-    font-family: "Raleway", sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--basic-color-logo);
-    display: flex;
-    align-items: center;
-    margin-right: 76px;
-}
-
-.logo_studio {
-    color: var(--primary-black);
-    font-family: "Raleway", sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    text-decoration: none;
-}
-
-.header-container {
-    display: flex;
-    align-items: center;
-}
-
-.header-navigation {
-    display: flex;
-    align-items: center;
-    flex-grow: 1;
-}
-
-.header_li {
-    display: flex;
-    gap: 40px;
-}
-
-.contacts_list {
-    display: flex;
-    gap: 40px;
-}
-
-.header_menu_item {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #404bbf;
-}
-
 .link {
     text-decoration: none;
 }
@@ -113,15 +55,21 @@ body {
     list-style: none;
 }
 
-.header_menu_li {
-    color: var(--primary-black);
-    display: block;
-    padding: 24px 0;
-    color: #404bbf;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+/* header */
+
+.header-cont {
+    background-color #ffffff;
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.current {
+.header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header_menu_li.current {
     position: relative;
     color: #404bbf;
 }
@@ -138,12 +86,68 @@ body {
     color: #404bbf;
 }
 
-.header_menu_li:hover {
-    color: var(--hover-color);
+.header-navigation {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
 }
 
+.logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--basic-color-logo);
+    display: flex;
+    align-items: center;
+    margin-right: 76px;
+    padding: 25px 0;
+}
+
+.logo_studio {
+    color: var(--primary-black);
+    font-family: "Raleway", sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.header_li {
+    display: flex;
+    gap: 40px;
+}
+
+.header_menu_li {
+    color: #2e2f42;
+    display: block;
+    padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header_menu_item{
+    color:#2e2f42;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+.header_menu_li:hover,
 .header_menu_li:focus {
-    color: var(--hover-color);
+    color: #404bbf;
+}
+
+.header_menu_li:active {
+    text-decoration: underline;
+}
+
+.contacts_list {
+    display: flex;
+    gap: 40px;
 }
 
 .contacts {
