--- a/css/style.css
+++ b/css/style.css
@@ -69,24 +69,6 @@ body {
     justify-content: space-between;
 }
 
-.header_menu_li .current {
-    position: relative;
-    color: #404bbf;
-}
-
-
-.current::after {
-    content: '';
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: #404bbf;
-    color: #404bbf;
-}
-
 .header-navigation {
     display: flex;
     align-items: center;
@@ -134,17 +116,32 @@ body {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header_menu_item {
-    color: #2e2f42;
+.header_menu_li:hover {
+    color: #404bbf;
 }
 
-.header_menu_li:hover,
 .header_menu_li:focus {
     color: #404bbf;
 }
 
 .header_menu_li:active {
     text-decoration: underline;
+}
+.header_menu_li.current:active {
+    position: relative;
+    color: #404bbf;
+}
+
+.current::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
+    color: #404bbf;
+    bottom: -1px;
+    left: 0;
 }
 
 .contacts_list {
