--- a/css/style.css
+++ b/css/style.css
@@ -115,10 +115,12 @@ body {
     color: #2e2f42;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header_menu_item{
+
+.current {
     position: relative;
     color: #404bbf;
 }
+
 .header_menu_li:hover {
     color: #404bbf;
 }
@@ -132,7 +134,7 @@ body {
 }
 
 
-.current:active::after {
+.current::after {
     content: "";
     position: absolute;
     width: 100%;
