--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,23 @@ body {
     justify-content: space-between;
 }
 
+.current {
+    position: relative;
+    color: #404bbf;
+}
+
+.current::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
+    color: #404bbf;
+    bottom: -1px;
+    left: 0;
+}
+
 .header-navigation {
     display: flex;
     align-items: center;
@@ -116,11 +133,6 @@ body {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.current {
-    position: relative;
-    color: #404bbf;
-}
-
 .header_menu_li:hover {
     color: #404bbf;
 }
@@ -131,19 +143,6 @@ body {
 
 .header_menu_li:active {
     text-decoration: underline;
-}
-
-
-.current::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: #404bbf;
-    color: #404bbf;
-    bottom: -1px;
-    left: 0;
 }
 
 .contacts_list {
@@ -177,13 +176,14 @@ body {
 .main_title {
     background-color: var(--primary-black);
     padding: 188px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/main.jpg);
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     margin-left: auto;
     margin-right: auto;
+
 }
 
 .main_h {
