--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,10 @@ body {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.header_menu_item{
+    color: #404bbf; 
+}
+
 .header_menu_li:hover {
     color: #404bbf;
 }
