--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ body {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header_menu_item{
+.current{
     color: #404bbf;}
 
 .header_menu_li:hover {
